Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntegerUndefined.quorum
class Main
    action Main
        integer v = Test()
    end

    action Test() returns integer
        return undefined
    end
end